# PX4-Autopilot

./: .gitignore  AGENTS.md
boards/auterion/fmu-v6s/init/: rc.board_defaults
docs/en/middleware/: uxrce_dds.md
px4_extraction/: CMakeLists.txt  README.md
px4_extraction/actuator_output/: ActuatorOutputTypes.hpp  ActuatorOutputWrapper.cpp  ActuatorOutputWrapper.hpp  CMakeLists.txt  ThrustCurve.hpp
px4_extraction/attitude_control/: AttitudeControlTypes.hpp  AttitudeControllerWrapper.cpp  AttitudeControllerWrapper.hpp  CMakeLists.txt
px4_extraction/control_allocator/: ActuatorEffectiveness.cpp  ActuatorEffectiveness.hpp  CMakeLists.txt  ControlAllocation.cpp  ControlAllocation.hpp  ControlAllocationPseudoInverse.cpp  ControlAllocationPseudoInverse.hpp  ControlAllocationSequentialDesaturation.cpp  ControlAllocationSequentialDesaturation.hpp  ControlAllocatorTypes.hpp  ControlAllocatorWrapper.cpp  ControlAllocatorWrapper.hpp  RotorGeometry.hpp
px4_extraction/doc/: validation.md
px4_extraction/lib/px4_platform_common/: defines.h
px4_extraction/rate_control/: CMakeLists.txt  RateControl.cpp  RateControl.hpp  RateControlTypes.hpp  RateControllerWrapper.cpp  RateControllerWrapper.hpp
px4_extraction/scripts/: extract_ulog_trace.py  plot_pwm_comparison.py  requirements.txt
px4_extraction/test/: ActuatorOutputTest.cpp  CMakeLists.txt  ControlAllocatorTest.cpp  L2_EquivalenceTest.cpp  L3_ReplayTest.cpp  RateControlTest.cpp  attitude_control_simple_test.cpp  validate_source_diff.sh
px4_extraction/test/data/: l3_trace.csv
refactor_history/: 1_attitude_controller.md
src/modules/fw_mode_manager/: FixedWingModeManager.cpp  FixedWingModeManager.hpp
src/modules/gimbal/: gimbal_params.c  output.cpp  output.h
src/systemcmds/serial_socat/: serial_socat.cpp
user-knowledge/: control_allocation_mixer.md  mc_att_control.md  mc_rate_control.md  pwm_out_mixer.md
